border left and right solution to cover flow carousel overflow issue

--- a/costa-rica-course/src/app/courses/coursesPage.module.scss
+++ b/costa-rica-course/src/app/courses/coursesPage.module.scss
@@ -9,5 +9,5 @@
   justify-content: center;
   // width: 754.87px;
   // width: 50%;
-  margin-bottom: 50px;
+  margin: 50px 0;
 }
